Influence parameter in NLA Editor works only on the first track #35263

Closed
opened 2013-05-08 19:08:01 +02:00 by Olivier Vandecasteele · 5 comments

Relates to: #35382
Duplicates: #35382

%%%--- Blender version with error ---
Blender 2.66a

- Short description of error ---

(See the attached Blend file.)
When I am trying to modify the parameter "Influence" of a strip, only on the first track seems have an effect.
If you invert the tracks, that's the other track's parameter that had an effect.
My opinion is that the parameter have only an effect on the top track, not the others.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open the .blend file
    For your information:
    The track named "main" is a simple translation of the cube
    The track named "second" is a vibration along the other axis
  2. Play the animation
  3. On the track named "second", you can see that the parameter Influence (set to 0.2) had an effect. If you set it to 1.0 you will see a big difference (which is expected).
  4. Now, on the track named "main", modify the parameter "Influence". No change. The error is here.

Also:
5) If you swap the order of the tracks, you will see that this is the position that determines which track is working.
%%%

**Relates to**: #35382 **Duplicates**: #35382 %%%--- Blender version with error --- Blender 2.66a - Short description of error --- (See the attached Blend file.) When I am trying to modify the parameter "Influence" of a strip, only on the first track seems have an effect. If you invert the tracks, that's the other track's parameter that had an effect. My opinion is that the parameter have only an effect on the top track, not the others. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Open the .blend file For your information: The track named "main" is a simple translation of the cube The track named "second" is a vibration along the other axis 2) Play the animation 3) On the track named "second", you can see that the parameter Influence (set to 0.2) had an effect. If you set it to 1.0 you will see a big difference (which is expected). 4) Now, on the track named "main", modify the parameter "Influence". No change. The error is here. Also: 5) If you swap the order of the tracks, you will see that this is the position that determines which track is working. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Without checking your file, it looks like this is potentially related to another bug report in the tracker. %%%

%%%Without checking your file, it looks like this is potentially related to another bug report in the tracker. %%%
Member

%%%Ok, looks like a duplicate of the other bug :)

Closing.%%%

%%%Ok, looks like a duplicate of the other bug :) Closing.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

%%%Fixed in svn r. 57333%%%

%%%Fixed in svn r. 57333%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35263
No description provided.